Fixed exceptions, replaced "Response" with "DTO" in controllers